# working-api-rust

./: .gitignore  bin.txt
rust-fetch/: .env  Cargo.toml
rust-fetch/src/: api.rs  db.rs  main.rs  models.rs  scheduler.rs  server.rs
rust-fetch/target 2/: .rustc_info.json
rust-fetch/target 2/debug/.fingerprint/autocfg-a6bce098d9692bb8/: lib-autocfg.json
rust-fetch/target 2/debug/.fingerprint/base64-df7f5f4e4148a1e4/: lib-base64
rust-fetch/target 2/debug/.fingerprint/bitflags-9cdbe21b48e880eb/: lib-bitflags
rust-fetch/target 2/debug/.fingerprint/bitflags-f071ef5bcdae5e6f/: lib-bitflags  lib-bitflags.json
rust-fetch/target 2/debug/.fingerprint/block-buffer-4a124abf6b9278d3/: lib-block_buffer  lib-block_buffer.json
rust-fetch/target 2/debug/.fingerprint/byteorder-5ce63ca97de0fd19/: lib-byteorder  lib-byteorder.json
rust-fetch/target 2/debug/.fingerprint/cfg-if-258ef227f8409004/: lib-cfg_if.json
rust-fetch/target 2/debug/.fingerprint/core-foundation-4ff6208a08fc33a8/: lib-core_foundation
rust-fetch/target 2/debug/.fingerprint/core-foundation-sys-b94c763bf9dbdb27/: lib-core_foundation_sys  lib-core_foundation_sys.json
rust-fetch/target 2/debug/.fingerprint/crypto-common-f2d96197956362f0/: lib-crypto_common.json
rust-fetch/target 2/debug/.fingerprint/digest-38d213626de53fd5/: lib-digest
rust-fetch/target 2/debug/.fingerprint/dotenv-28a8519b4d6dcf83/: lib-dotenv.json
rust-fetch/target 2/debug/.fingerprint/encoding_rs-88dbc1cd3325ad5d/: lib-encoding_rs.json
rust-fetch/target 2/debug/.fingerprint/equivalent-4a34a44ac787e9b7/: lib-equivalent.json
(+116 files in other folders)
