[package]
name = "rust-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio-postgres = "0.7"
serde_json = "1.0"
chrono = "0.4"
rust_decimal = "1.24"