[package]
name = "rust-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio-postgres = "0.7"
tower = "0.4"
chrono = "0.4"
rust_decimal = "1.24"
reqwest = { version = "0.11", features = ["json"] }
tokio_schedule = "0.3.2"